# CrypToth

./: CrypToth.ipynb  PU-Change-Point.R  README.md  cosmdanalyzer.py  setting3.toml
cosmdanalyzer/: README.md  pyproject.toml
cosmdanalyzer/data/: LennardJonesParameters.csv  hydrophobicity.csv
cosmdanalyzer/sample_input/single/: TEST_PROJECT_nV.dx  TEST_PROJECT_nVH.dx
cosmdanalyzer/src/: arguments.py
cosmdanalyzer/src/chem/: __init__.py  charge.py  const.py  pymol.py  rdkitutil.py  residueinfo.py
cosmdanalyzer/src/clustering/: __init__.py  clusterdata.py  dbscan.py  meanshift.py  neighbor.py  singlelinkage3d.py
cosmdanalyzer/src/common/: __init__.py  function.py  iterator.py  other.py
cosmdanalyzer/src/debug/: debug.py  testclustering.py  testscikitlearn.py
cosmdanalyzer/src/fpocket/: parser.py
cosmdanalyzer/src/graph/: match.py
cosmdanalyzer/src/index/: __init__.py  const.py  index2d.py  index3d.py
cosmdanalyzer/src/main/: calccharge.py  calcmain.py  fpocketscore.py  input.py  main.py  multicluster.py  output.py  scoretype.py  spot.py
cosmdanalyzer/src/neighbors/: liner.py  vptree.py
cosmdanalyzer/src/scorecalc/: calcchargedensity.py  compactness.py  convexity.py  gfe.py  protrusion.py  rmsf.py
cosmdanalyzer/src/solidcalc/: __init__.py  commonutil.py  pointset.py  spherearea.py  spherepoint.py  spherevolume.py  sweepprune.py  typehint.py  vector3f.py
cosmdanalyzer/src/speedtest/: speedvptree.py
cosmdanalyzer/src/test/: test_fpocket_info.txt  testcluster.py  testcollision.py  testfpocket.py  testgraph.py  testindex.py  testscore.py  (+1 more)
(+42 files in other folders)
